<?xml version="1.0"?>
<package format="2">
  <name>sort_nums</name>
  <version>0.0.1</version>
  <description>A ROS2 package to sort numbers using a service</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tutorial_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
